translation and improvements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<div class="language-buttons">
+  <button (click)="switchToEnglish()">EN</button>
+  <button (click)="switchToPortuguese()">PT</button>
+</div>
 <router-outlet></router-outlet>
