--- a/src/app/components/collection/collection.component.html
+++ b/src/app/components/collection/collection.component.html
@@ -25,7 +25,7 @@
         <mat-card-content fxLayout="row" fxLayoutAlign="end" fxLayoutGap="12px">
           <p>
             <mat-icon inline>favorite</mat-icon>
-            {{ photo.likes }} likes
+            {{ photo.likes+' '+('card.likes' | translate)}} 
           </p>
         </mat-card-content>
       </mat-card>
