--- a/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -1,10 +1,10 @@
 <div class="breadcrumbs">
   <ng-container *ngFor="let item of breadcrumbs; let i = index">
     <a *ngIf="!item.path" class="active">
-      <span>{{ item.label }}</span>
+      <span>{{ 'breadcrumbs.' + item.label | translate }}</span>
     </a>
     <a *ngIf="item.path" (click)="clickBreadcrumb(item.path, item.id)">
-      <span>{{ item.label }}</span>
+      <span>{{ 'breadcrumbs.' + item.label | translate }}</span>
     </a>
     <span *ngIf="i < breadcrumbs.length - 1">></span>
   </ng-container>
