--- a/src/sass/layout/layout.scss
+++ b/src/sass/layout/layout.scss
@@ -2,6 +2,11 @@
   background-color: #e3e3e3;
 }
 
+.language-buttons {
+  position: absolute;
+  right: 0;
+}
+
 .mat-toolbar {
   span,
   button {
